--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,9 @@ hs_err_pid*
 
 # Remvoe server stuff from path
 /server/
+
+# Maven target files
+/target
+
+# Don't need dependecy reduced pom
+dependency-reduced-pom.xml
