--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,22 @@
             <artifactId>annotations</artifactId>
             <version>20.0.0</version>
         </dependency>
+
+        <!-- Bukkit Mods -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.1.1-jre</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
+
     </dependencies>
     <!-- This builds a completely 'ready to start' jar with all dependencies inside -->
     <build>
