--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
             <version>3.12.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
 
     </dependencies>
     <!-- This builds a completely 'ready to start' jar with all dependencies inside -->
