--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,19 @@
             <url>http://jline.sourceforge.net/m2repo</url>
         </repository>
     </repositories>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>5.9.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.bukkit</groupId>
@@ -53,7 +66,8 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.7.2</version>
+<!--            <version>3.7.2</version>-->
+            <version>3.44.1.0</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -121,6 +135,13 @@
             <version>2.9.0</version>
         </dependency>
 
+        <!-- Test Dependencies -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <!-- This builds a completely 'ready to start' jar with all dependencies inside -->
     <build>
@@ -135,6 +156,10 @@
 <!--            </resource>-->
 <!--        </resources>-->
         <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -176,7 +201,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
+                <version>3.5.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -184,6 +209,10 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                <resource>META-INF/services/java.sql.Driver</resource>
+                            </transformer>
                             <artifactSet>
                                 <excludes>
                                     <exclude>junit:junit</exclude>
