--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <groupId>org.bukkit</groupId>
     <artifactId>project-poseidon</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.8</version>
-    <name>Project-Poseidon</name>
+    <version>0.0.1</version>
+    <name>Project-Vodka</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <api.version>unknown</api.version>
