--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bukkit</groupId>
-    <artifactId>project-poseidon</artifactId>
+    <artifactId>proj-vodko</artifactId>
     <packaging>jar</packaging>
     <version>0.0.1</version>
     <name>Project-Vodka</name>
