--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,13 @@
             <artifactId>gson</artifactId>
             <version>2.9.0</version>
         </dependency>
+             
+        <dependency>
+           <groupId>org.bstats</groupId>
+           <artifactId>bstats-bukkit</artifactId>
+           <version>3.0.2</version>
+           <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <!-- This builds a completely 'ready to start' jar with all dependencies inside -->
