--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [ '8', '17' ]
+        java-version: [ '8' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
