Resolve issues with GitHub Action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release JAR on Push to Main
+name: Release Workflow
 
 on:
   push:
@@ -7,59 +7,55 @@ on:
       - master
 
 jobs:
-  build-and-release:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       # Step 1: Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # Step 2: Set up Java 8
-      - name: Set up JDK 8
-        uses: actions/setup-java@v3
+      # Step 2: Set up JDK 1.8
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
-          java-version: '8'
+          java-version: 8
 
-      # Step 3: Extract POM version
-      - name: Extract POM Version
-        id: pom_version
+      # Step 3: Get the version from pom.xml
+      - name: Get the version from pom.xml
+        id: get_version
+        run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+
+      # Step 4: Fail if snapshot version
+      - name: Fail if snapshot version
         run: |
-          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-          echo "POM_VERSION=$VERSION" >> $GITHUB_ENV
+          if [[ $PROJECT_VERSION == *"-SNAPSHOT"* ]]; then
+            echo "Snapshot versions are not releasable"
+            exit 0
+          fi
 
-      # Step 4: Get current date and SHA
+      # Step 5: Generate custom release version
       - name: Generate Release Version
         id: release_version
         run: |
           DATE=$(date +'%y%m%d')
           SHA=$(echo $GITHUB_SHA | cut -c1-7)
-          VERSION="${POM_VERSION}--${DATE}-${SHA}"
-          echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
+          RELEASE_VERSION="${PROJECT_VERSION}-${DATE}-${SHA}"
+          echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV
 
-      # Step 5: Build the JAR
-      - name: Build JAR
-        run: mvn package
+      # Step 6: Build with Maven
+      - name: Build with Maven
+        run: mvn clean package
 
-      # Step 6: Create Release
-      - name: Create Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Step 7: Create GitHub Release
+      - name: Create GitHub Release
+        if: ${{ !endsWith(env.PROJECT_VERSION, '-SNAPSHOT') }}
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.RELEASE_VERSION }}
-          release_name: ${{ env.RELEASE_VERSION }}
-          draft: false
-          prerelease: false
-
-      # Step 7: Upload the JAR as a Release Asset
-      - name: Upload JAR
-        uses: actions/upload-release-asset@v1
+          name: ${{ env.RELEASE_VERSION }}
+          files: |
+            target/*.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create-release.outputs.upload_url }}
-          asset_path: target/*.jar
-          asset_name: your-project-name-${{ env.RELEASE_VERSION }}.jar
-          asset_content_type: application/java-archive
