Remove ModLoaderMP as a library. It shouldn't be!

--- a/pom.xml
+++ b/pom.xml
@@ -94,13 +94,13 @@
             <scope>compile</scope>
         </dependency>
 
-        <dependency>
-            <groupId>modloader</groupId>
-            <artifactId>ModLoaderMP-B1.7.3</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/libs/ModLoaderMP.jar</systemPath>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>modloader</groupId>-->
+<!--            <artifactId>ModLoaderMP-B1.7.3</artifactId>-->
+<!--            <version>1.0</version>-->
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${project.basedir}/libs/ModLoaderMP.jar</systemPath>-->
+<!--        </dependency>-->
 
 
         <dependency>
@@ -150,20 +150,49 @@
             <version>2.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.git-commit-id</groupId>
+            <artifactId>git-commit-id-maven-plugin</artifactId>
+            <version>4.9.9</version>
+        </dependency>
+
     </dependencies>
     <!-- This builds a completely 'ready to start' jar with all dependencies inside -->
     <build>
         <defaultGoal>clean install</defaultGoal>
-<!--        <sourceDirectory>src</sourceDirectory>-->
-<!--        <resources>-->
-<!--            <resource>-->
-<!--                <directory>src</directory>-->
-<!--                <excludes>-->
-<!--                    <exclude>**/*.java</exclude>-->
-<!--                </excludes>-->
-<!--            </resource>-->
-<!--        </resources>-->
+        <!--        <sourceDirectory>src</sourceDirectory>-->
+        <!--        <resources>-->
+        <!--            <resource>-->
+        <!--                <directory>src</directory>-->
+        <!--                <excludes>-->
+        <!--                    <exclude>**/*.java</exclude>-->
+        <!--                </excludes>-->
+        <!--            </resource>-->
+        <!--        </resources>-->
         <plugins>
+            <plugin>
+                <groupId>io.github.git-commit-id</groupId>
+                <artifactId>git-commit-id-maven-plugin</artifactId>
+                <version>4.9.9</version>
+                <executions>
+                    <execution>
+                        <id>get-the-git-infos</id>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                        <phase>initialize</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
+                    <includeOnlyProperties>
+                        <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
+                        <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
+                    </includeOnlyProperties>
+                    <commitIdGenerationMode>full</commitIdGenerationMode>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
