--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -15,27 +15,81 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Step 2: Set up JDK 1.8
       - name: Set up JDK 1.8
         uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
           java-version: 8
 
+      # Step 3: Get the version from pom.xml
+      - name: Get the version from pom.xml
+        id: get_version
+        run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+
+      # Step 4: Generate custom release version
+      - name: Generate Release Version
+        id: release_version
+        run: |
+          DATE=$(date +'%y%m%d-%H%M')
+          SHA=$(echo $GITHUB_SHA | cut -c1-7)
+          RELEASE_VERSION="${PROJECT_VERSION}-${DATE}-${SHA}"
+          echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV
+
+      # Step 5: Create version.properties file
+      - name: Create version.properties file
+        run: |
+          mkdir -p src/main/resources
+          echo "version=${{ env.RELEASE_VERSION }}" > src/main/resources/version.properties
+          echo "date=$(date +'%Y-%m-%d %H:%M:%S')" >> src/main/resources/version.properties
+          echo "sha=${GITHUB_SHA}" >> src/main/resources/version.properties
+          echo "release_tag=${{ env.RELEASE_VERSION }}" >> src/main/resources/version.properties
+          
+          # Determine build type
+          if [[ "${{ github.ref }}" == "refs/heads/master" || "${{ github.ref }}" == "refs/heads/main" ]]; then
+            BUILD_TYPE="production"
+          elif [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            BUILD_TYPE="pull_request"
+          else
+            BUILD_TYPE="development"
+          fi
+          
+          echo "build_type=${BUILD_TYPE}" >> src/main/resources/version.properties
+
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4.5
         with:
           maven-version: 3.9.1
 
-      - name: build application
+      # Step 6: Build application
+      - name: Build Application
         shell: bash
         run: |
           mvn clean install
 
+      # Step 7: Run Tests
+      - name: Run Tests
+        shell: bash
+        run: |
+          mvn test
+
+      # Step 8: Upload artifact
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: ${{ github.event.repository.name }}-artifact
           path: target/*.jar
+
+      # Step 9: Notify Build Status
+      - name: Notify Build Status
+        if: ${{ always() }}
+        run: |
+          if [ "${{ success() }}" = "true" ]; then
+            echo "Build succeeded for ${{ github.event.repository.name }} on ${{ github.ref_name }}"
+          else
+            echo "Build failed for ${{ github.event.repository.name }} on ${{ github.ref_name }}"
+          fi
