--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,9 @@ jobs:
           echo "git_commit=${GITHUB_SHA}" >> src/main/resources/version.properties
           
           # Application Information
-          echo "app_name=Project Poseidon" >> src/main/resources/version.properties
+          APP_NAME=$(mvn help:evaluate -Dexpression=project.name -q -DforceStdout)
+          
+          echo "app_name=${APP_NAME}" > src/main/resources/version.properties
           echo "release_version=${{ env.RELEASE_VERSION }}" >> src/main/resources/version.properties
           echo "maven_version=${{ env.PROJECT_VERSION }}" >> src/main/resources/version.properties
           
