--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>project-poseidon</artifactId>
     <packaging>jar</packaging>
     <version>1.1.8</version>
-    <name>Project-Poseidon</name>
+    <name>Project Poseidon</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <api.version>unknown</api.version>
